# fetch_cappy1

./: CMakeLists.txt  README.md  package.xml  progress.txt~
computer_vision/: .edited_cvbridge.py.swp  .line_detector.py.swp  .robot_circle_detector.py.swp  .ros_cv_testing.py.swp  circle_detector.py  cvbridge.py  line_detector.py  ros_cv_testing.py  ros_cv_testing.py~
computer_vision/bagfiles/: test.bag
computer_vision/launch/: export.launch
computer_vision/notes/: bag_file_instructions.txt  parameter_notes.txt  results.txt~
e90/: .trajectory_manager.py.swp  box_added.py  example.txt  fetch.launch.xml  gazebo_traj_man.launch  genfromtxt_example.py  get_velocities.py  perceive_box.py  plan_to_goal.py  plan_to_joint_space.py  prepare_simulated_robot.py  trajectory_manager.py
e90/textfiles/: around_box.txt  high_five.txt  intermed.txt  orig_square.txt  rrt.txt  rrt_backwards.txt  rrt_collision.txt  square.txt  to_end.txt  to_start.txt  to_tuck.txt  to_zero.txt  to_zero_box.txt  two_boxes.txt  two_boxes_tuck.txt
gazebo/launch/: testspace.launch  testspace.launch~
gazebo/worlds/: test_zone.sdf
gretchen/: .instructions.txt.swp  .plan_to_goal.py.swp  .trajectory_execution.py.swp  floor_to_table.py  gripper_interface_client.py  instructions.txt  move_base_client.py  move_torso_client.py  plan_to_goal.py  table_to_floor.py  trajectory_audit.py  trajectory_execution.py
gretchen/push_button_demo/: .follow_trajectory_client.py.swm  .follow_trajectory_client.py.swn  .follow_trajectory_client.py.swo  .follow_trajectory_client.py.swp  .plan_to_goal.py.swm  .plan_to_goal.py.swn  .plan_to_goal.py.swo  .plan_to_goal.py.swp  .push_button.py.swf  .push_button.py.swg  .push_button.py.swh  .push_button.py.swi  .push_button.py.swj  .push_button.py.swk  .push_button.py.swl  .push_button.py.swm  .push_button.py.swn  .push_button.py.swo  .push_button.py.swp  .push_button_1.py.swp  .trajectory_execution.py.swn  .trajectory_execution.py.swo  .trajectory_execution.py.swp  follow_trajectory_client.py  place_object.py  (+3 more)
launch/: example_launch.launch  new_fetch.launch  testdemo.launch~
moveit_config/: e90_notes.txt  srdf_vs_urdf.txt
notes/: planners.txt~  progress.txt  progress.txt~
scripts/: devel_script.py  devel_script.py~  fetch_test.py  testdemo.py  trajectory_audit.py
(+5 files in other folders)
